--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-router": "^6.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
-    "sass": "^1.42.1"
+    "sass": "^1.42.1",
+    "sweetalert2": "^11.3.0",
+    "sweetalert2-react-content": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
